...
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="170dp">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="393dp"
        android:layout_height="150dp"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="11dp"
        android:layout_alignParentTop="true"
...
            android:layout_height="130dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/sem_foto" />

        <TextView
            android:id="@+id/nomeProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginLeft="150dp"
            android:textSize="8pt"
            android:text="Nome" />
...
