...
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="48dp"
        android:layout_above="@+id/textCotacaoDoBoi"
        android:layout_alignRight="@+id/buttonAnuncios"
        android:layout_alignEnd="@+id/buttonAnuncios"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="@+id/frameLayout2" />

    <Button
        android:id="@+id/buttonAnuncios"
        android:layout_width="305dp"
        android:layout_height="47dp"
        android:text="Ver Anúncios"
        android:onClick="onAnuncios"
        android:layout_below="@+id/logoInicial"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
...
